# kunuk

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
core/: .golangci.yml  doc.go  go.mod
core/cmd/api/: main.go  main_test.go
crypto-core/: Cargo.toml  rust-toolchain.toml
crypto-core/src/: error.rs  lib.rs
crypto-core/src/crypto/: aead.rs  argon2id.rs  header.rs  kdf.rs  mod.rs  params.rs  rng.rs  signature.rs
crypto-core/src/envelope/: mod.rs
crypto-core/src/keys/: mod.rs
crypto-core/src/recovery/: mod.rs
crypto-core/src/sync/: mod.rs
crypto-core/src/vault/: item.rs  manifest.rs  mod.rs
crypto-core/tests/: vectors_harness.rs
crypto-core/tests/vectors/envelope/: biometric.json  password.json  recovery.json
crypto-core/tests/vectors/hkdf/: dk-wrap.json  pk-wrap.json  rk-auth.json  rk-wrap.json
crypto-core/tests/vectors/item/: login.json
crypto-core/tests/vectors/kdf/: v1-base.json
crypto-core/tests/vectors/manifest/: base.json
crypto-core/tests/vectors/negative/: downgrade-params.json  item-trapianto.json  magic-errato.json  manifest-firma-manomessa.json  manifest-rollback.json  manifest-vault-errato.json  tipo-errato.json  trapianto-account.json  troncata.json  version-ignota.json
frontend/: .prettierignore  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/shared-ui/: placeholder.ts
scripts/db/: migrate.sh
scripts/dev/: setup.sh
scripts/infra/: Caddyfile  Dockerfile.api  Dockerfile.caddy  compose.yaml
